--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18.4)
-project(sequence_matcher)
+project(filterShortSeqs)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -12,5 +12,5 @@ endif()
 
 include_directories(.)
 
-add_executable(sequence_matcher
+add_executable(filterShortSeqs
         main.cpp include/progressbar.h)
